--- a/index.html
+++ b/index.html
@@ -591,6 +591,78 @@
                         </div>
                     </div>
                 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+                <!-- ===== -->
+                <div class="card-modal modal-open" data-modal="modal6">
+                    <img class="img-card-modal" src="./assets/img/projects/birthday-card.png"
+                        alt="Prévia do projeto Cartão de aniversário">
+                    <div class="info-card-modal">
+                        <p class="title-card-modal">Clique para mais informações</p>
+                        <ion-icon class="icon-card-modal" name="chevron-forward-circle"></ion-icon>
+                    </div>
+                </div>
+                <div class="modal" id="modal6">
+                    <div class="modal-content">
+                        <img class="img-projects" src="./assets/img/projects/birthday-card.png"
+                            alt="Prévia do projeto Portfólio">
+                        <div class="project-info-modal">
+                            <h5 class="title-info-modal">portfólio</h5>
+                            <p class="text-info-project">
+                                Este projeto foi desenvolvido com objetivo de facilitar a entrega
+                                dos convites e captação de nomes para um aniversário, sendo assim, não é preciso sair de casa para entrega-lo! 🎉
+                                (Não foi usado nenhum banco de dados para armazenar os nomes dos convidados, e foi usado um pouco de cada tecnologia)
+                            </p>
+                            <div class="techs-used-project">
+                                <img src="./assets/img/icons/html-img.svg" alt="Imagem html">
+                                <img src="./assets/img/icons/css-img.svg" alt="Imagem css">
+                                <img src="./assets/img/icons/javascript-img.svg" alt="Imagem javascript">
+                                <img src="./assets/img/icons/bootstrap-img.svg" alt="Imagem bootstrap">
+                                <img src="./assets/img/icons/bootstrap-img.svg" alt="Imagem jquery">
+                                <img src="./assets/img/icons/sass-img.svg" alt="Imagem sass">
+                            </div>
+                            <div class="btns-modal-project">
+                                <a href="https://paivaprogdev.github.io/Birthday-card/" target="_blank">
+                                    <ion-icon class="link-icon-btn" name="link-outline"></ion-icon>
+                                    abrir projeto
+                                </a>
+                                <a href="https://github.com/PaivaProgDev/Birthday-card" target="_blank">
+                                    <i class="github-icon-btn fa-brands fa-github"></i>
+                                    repositório
+                                </a>
+                                <a href="https://www.figma.com/file/YQsEKWKfi6lQQywIaKbl41/Birthday-Card?type=design&node-id=0-1&mode=design&t=tNG3eQC5fgWUdtWp-0"
+                                    target="_blank">
+                                    <ion-icon name="logo-figma"></ion-icon>
+                                    Protótipo
+                                </a>
+                            </div>
+                            <button class="btn-close-modal">X</button>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+
+
+
+
+                
                 <div class="new-projects">
                     <p>Novos projetos em breve...</p>
                 </div>
