--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
 
                 <!-- ===== -->
                 <div class="card-modal modal-open" data-modal="modal6">
-                    <img class="img-card-modal" src="./assets/img/projects/birthday-card.png"
+                    <img class="img-card-modal" src="./assets/img/projects/birthday-card.svg"
                         alt="Prévia do projeto Cartão de aniversário">
                     <div class="info-card-modal">
                         <p class="title-card-modal">Clique para mais informações</p>
