--- a/index.html
+++ b/index.html
@@ -603,10 +603,10 @@
                 </div>
                 <div class="modal" id="modal6">
                     <div class="modal-content">
-                        <img class="img-projects" src="./assets/img/projects/birthday-card.png"
-                            alt="Prévia do projeto Portfólio">
+                        <img class="img-projects" src="./assets/img/projects/birthday-card.svg"
+                            alt="Prévia do projeto Birthday-card">
                         <div class="project-info-modal">
-                            <h5 class="title-info-modal">portfólio</h5>
+                            <h5 class="title-info-modal">cartão aniversário/h5>
                             <p class="text-info-project">
                                 Este projeto foi desenvolvido com objetivo de facilitar a entrega
                                 dos convites e captação de nomes para um aniversário, sendo assim, não é preciso sair de casa para entrega-lo! 🎉
