--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
                             <h5 class="title-info-modal">cartão aniversário</h5>
                             <p class="text-info-project">
                                 Este projeto foi desenvolvido com objetivo de facilitar a entrega
-                                dos convites e captação de nomes para um aniversário, sendo assim, não é preciso sair de casa para entrega-lo! 🎉
+                                dos convites e captação de nomes para um aniversário 🎉
                                 (Não foi usado nenhum banco de dados para armazenar os nomes dos convidados, e foi usado um pouco de cada tecnologia)
                             </p>
                             <div class="techs-used-project">
